# PluginSDK

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: D2RLPluginConfig.cmake
examples/: README.md
examples/config-file/: config-file-sample.toml  config_file_plugin.cpp
examples/hello-console/: hello_console_plugin.cpp
examples/json-patches/: example-patches.json
examples/patching/: patching-sample.toml  patching_sample_plugin.cpp
